gerador_html/HtmlParser.py
# Generated from Html.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class HtmlParser ( Parser ):

    grammarFileName = "Html.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'TEXTO'", "'ESCOLHAUMA'", "'ESCOLHAVARIAS'", 
                     "'MENU'", "'BOTAO'", "'TABELA'", "'('", "','", "')'", 
                     "':'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NUMERO", "STRING", 
                      "IGNORE", "COMMENT" ]

    RULE_root = 0
    RULE_questao = 1
    RULE_qTexto = 2
    RULE_qRadioBox = 3
    RULE_qCheckBox = 4
    RULE_qMenu = 5
    RULE_qBotao = 6
    RULE_qTabela = 7
    RULE_opcoes = 8
    RULE_menuOpcoes = 9
    RULE_menuOpcao = 10
    RULE_linhaCabecalho = 11
    RULE_linhaDados = 12
    RULE_linha = 13
    RULE_str_ = 14

    ruleNames =  [ "root", "questao", "qTexto", "qRadioBox", "qCheckBox", 
                   "qMenu", "qBotao", "qTabela", "opcoes", "menuOpcoes", 
                   "menuOpcao", "linhaCabecalho", "linhaDados", "linha", 
                   "str_" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    NUMERO=11
    STRING=12
    IGNORE=13
    COMMENT=14

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def questao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HtmlParser.QuestaoContext)
            else:
                return self.getTypedRuleContext(HtmlParser.QuestaoContext,i)


        def getRuleIndex(self):
            return HtmlParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = HtmlParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 30
                self.questao()
                self.state = 33 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 126) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuestaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qTexto(self):
            return self.getTypedRuleContext(HtmlParser.QTextoContext,0)


        def qRadioBox(self):
            return self.getTypedRuleContext(HtmlParser.QRadioBoxContext,0)


        def qCheckBox(self):
            return self.getTypedRuleContext(HtmlParser.QCheckBoxContext,0)


        def qMenu(self):
            return self.getTypedRuleContext(HtmlParser.QMenuContext,0)


        def qBotao(self):
            return self.getTypedRuleContext(HtmlParser.QBotaoContext,0)


        def qTabela(self):
            return self.getTypedRuleContext(HtmlParser.QTabelaContext,0)


        def getRuleIndex(self):
            return HtmlParser.RULE_questao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuestao" ):
                listener.enterQuestao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuestao" ):
                listener.exitQuestao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuestao" ):
                return visitor.visitQuestao(self)
            else:
                return visitor.visitChildren(self)




    def questao(self):

        localctx = HtmlParser.QuestaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_questao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.state = 35
                self.qTexto()
                pass
            elif token in [2]:
                self.state = 36
                self.qRadioBox()
                pass
            elif token in [3]:
                self.state = 37
                self.qCheckBox()
                pass
            elif token in [4]:
                self.state = 38
                self.qMenu()
                pass
            elif token in [5]:
                self.state = 39
                self.qBotao()
                pass
            elif token in [6]:
                self.state = 40
                self.qTabela()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QTextoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMERO(self, i:int=None):
            if i is None:
                return self.getTokens(HtmlParser.NUMERO)
            else:
                return self.getToken(HtmlParser.NUMERO, i)

        def str_(self):
            return self.getTypedRuleContext(HtmlParser.Str_Context,0)


        def getRuleIndex(self):
            return HtmlParser.RULE_qTexto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQTexto" ):
                listener.enterQTexto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQTexto" ):
                listener.exitQTexto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQTexto" ):
                return visitor.visitQTexto(self)
            else:
                return visitor.visitChildren(self)




    def qTexto(self):

        localctx = HtmlParser.QTextoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_qTexto)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(HtmlParser.T__0)
            self.state = 44
            self.match(HtmlParser.NUMERO)
            self.state = 45
            self.match(HtmlParser.NUMERO)
            self.state = 46
            self.str_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QRadioBoxContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def str_(self):
            return self.getTypedRuleContext(HtmlParser.Str_Context,0)


        def opcoes(self):
            return self.getTypedRuleContext(HtmlParser.OpcoesContext,0)


        def getRuleIndex(self):
            return HtmlParser.RULE_qRadioBox

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQRadioBox" ):
                listener.enterQRadioBox(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQRadioBox" ):
                listener.exitQRadioBox(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQRadioBox" ):
                return visitor.visitQRadioBox(self)
            else:
                return visitor.visitChildren(self)




    def qRadioBox(self):

        localctx = HtmlParser.QRadioBoxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_qRadioBox)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(HtmlParser.T__1)
            self.state = 49
            self.str_()
            self.state = 50
            self.opcoes()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QCheckBoxContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def str_(self):
            return self.getTypedRuleContext(HtmlParser.Str_Context,0)


        def opcoes(self):
            return self.getTypedRuleContext(HtmlParser.OpcoesContext,0)


        def getRuleIndex(self):
            return HtmlParser.RULE_qCheckBox

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQCheckBox" ):
                listener.enterQCheckBox(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQCheckBox" ):
                listener.exitQCheckBox(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQCheckBox" ):
                return visitor.visitQCheckBox(self)
            else:
                return visitor.visitChildren(self)




    def qCheckBox(self):

        localctx = HtmlParser.QCheckBoxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_qCheckBox)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(HtmlParser.T__2)
            self.state = 53
            self.str_()
            self.state = 54
            self.opcoes()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QMenuContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def str_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HtmlParser.Str_Context)
            else:
                return self.getTypedRuleContext(HtmlParser.Str_Context,i)


        def menuOpcoes(self):
            return self.getTypedRuleContext(HtmlParser.MenuOpcoesContext,0)


        def getRuleIndex(self):
            return HtmlParser.RULE_qMenu

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQMenu" ):
                listener.enterQMenu(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQMenu" ):
                listener.exitQMenu(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQMenu" ):
                return visitor.visitQMenu(self)
            else:
                return visitor.visitChildren(self)




    def qMenu(self):

        localctx = HtmlParser.QMenuContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_qMenu)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(HtmlParser.T__3)
            self.state = 57
            self.str_()
            self.state = 58
            self.str_()
            self.state = 59
            self.menuOpcoes()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QBotaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def str_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HtmlParser.Str_Context)
            else:
                return self.getTypedRuleContext(HtmlParser.Str_Context,i)


        def getRuleIndex(self):
            return HtmlParser.RULE_qBotao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQBotao" ):
                listener.enterQBotao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQBotao" ):
                listener.exitQBotao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQBotao" ):
                return visitor.visitQBotao(self)
            else:
                return visitor.visitChildren(self)




    def qBotao(self):

        localctx = HtmlParser.QBotaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_qBotao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(HtmlParser.T__4)
            self.state = 62
            self.str_()
            self.state = 63
            self.str_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QTabelaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def str_(self):
            return self.getTypedRuleContext(HtmlParser.Str_Context,0)


        def linhaCabecalho(self):
            return self.getTypedRuleContext(HtmlParser.LinhaCabecalhoContext,0)


        def linhaDados(self):
            return self.getTypedRuleContext(HtmlParser.LinhaDadosContext,0)


        def getRuleIndex(self):
            return HtmlParser.RULE_qTabela

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQTabela" ):
                listener.enterQTabela(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQTabela" ):
                listener.exitQTabela(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQTabela" ):
                return visitor.visitQTabela(self)
            else:
                return visitor.visitChildren(self)




    def qTabela(self):

        localctx = HtmlParser.QTabelaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_qTabela)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(HtmlParser.T__5)
            self.state = 66
            self.str_()
            self.state = 67
            self.linhaCabecalho()
            self.state = 68
            self.linhaDados()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpcoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def str_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HtmlParser.Str_Context)
            else:
                return self.getTypedRuleContext(HtmlParser.Str_Context,i)


        def getRuleIndex(self):
            return HtmlParser.RULE_opcoes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpcoes" ):
                listener.enterOpcoes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpcoes" ):
                listener.exitOpcoes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpcoes" ):
                return visitor.visitOpcoes(self)
            else:
                return visitor.visitChildren(self)




    def opcoes(self):

        localctx = HtmlParser.OpcoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_opcoes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(HtmlParser.T__6)
            self.state = 71
            self.str_()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 72
                self.match(HtmlParser.T__7)
                self.state = 73
                self.str_()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.match(HtmlParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MenuOpcoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def menuOpcao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HtmlParser.MenuOpcaoContext)
            else:
                return self.getTypedRuleContext(HtmlParser.MenuOpcaoContext,i)


        def getRuleIndex(self):
            return HtmlParser.RULE_menuOpcoes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMenuOpcoes" ):
                listener.enterMenuOpcoes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMenuOpcoes" ):
                listener.exitMenuOpcoes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMenuOpcoes" ):
                return visitor.visitMenuOpcoes(self)
            else:
                return visitor.visitChildren(self)




    def menuOpcoes(self):

        localctx = HtmlParser.MenuOpcoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_menuOpcoes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(HtmlParser.T__6)
            self.state = 82
            self.menuOpcao()
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 83
                self.match(HtmlParser.T__7)
                self.state = 84
                self.menuOpcao()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(HtmlParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MenuOpcaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def str_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HtmlParser.Str_Context)
            else:
                return self.getTypedRuleContext(HtmlParser.Str_Context,i)


        def getRuleIndex(self):
            return HtmlParser.RULE_menuOpcao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMenuOpcao" ):
                listener.enterMenuOpcao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMenuOpcao" ):
                listener.exitMenuOpcao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMenuOpcao" ):
                return visitor.visitMenuOpcao(self)
            else:
                return visitor.visitChildren(self)




    def menuOpcao(self):

        localctx = HtmlParser.MenuOpcaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_menuOpcao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.str_()
            self.state = 93
            self.match(HtmlParser.T__9)
            self.state = 94
            self.str_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LinhaCabecalhoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def str_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HtmlParser.Str_Context)
            else:
                return self.getTypedRuleContext(HtmlParser.Str_Context,i)


        def getRuleIndex(self):
            return HtmlParser.RULE_linhaCabecalho

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLinhaCabecalho" ):
                listener.enterLinhaCabecalho(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLinhaCabecalho" ):
                listener.exitLinhaCabecalho(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLinhaCabecalho" ):
                return visitor.visitLinhaCabecalho(self)
            else:
                return visitor.visitChildren(self)




    def linhaCabecalho(self):

        localctx = HtmlParser.LinhaCabecalhoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_linhaCabecalho)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(HtmlParser.T__6)
            self.state = 97
            self.str_()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 98
                self.match(HtmlParser.T__7)
                self.state = 99
                self.str_()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self.match(HtmlParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LinhaDadosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def linha(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HtmlParser.LinhaContext)
            else:
                return self.getTypedRuleContext(HtmlParser.LinhaContext,i)


        def getRuleIndex(self):
            return HtmlParser.RULE_linhaDados

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLinhaDados" ):
                listener.enterLinhaDados(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLinhaDados" ):
                listener.exitLinhaDados(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLinhaDados" ):
                return visitor.visitLinhaDados(self)
            else:
                return visitor.visitChildren(self)




    def linhaDados(self):

        localctx = HtmlParser.LinhaDadosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_linhaDados)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(HtmlParser.T__6)
            self.state = 108
            self.linha()
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 109
                self.match(HtmlParser.T__7)
                self.state = 110
                self.linha()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 116
            self.match(HtmlParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LinhaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def str_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HtmlParser.Str_Context)
            else:
                return self.getTypedRuleContext(HtmlParser.Str_Context,i)


        def getRuleIndex(self):
            return HtmlParser.RULE_linha

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLinha" ):
                listener.enterLinha(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLinha" ):
                listener.exitLinha(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLinha" ):
                return visitor.visitLinha(self)
            else:
                return visitor.visitChildren(self)




    def linha(self):

        localctx = HtmlParser.LinhaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_linha)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(HtmlParser.T__6)
            self.state = 119
            self.str_()
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 120
                self.match(HtmlParser.T__7)
                self.state = 121
                self.str_()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127
            self.match(HtmlParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Str_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(HtmlParser.STRING, 0)

        def getRuleIndex(self):
            return HtmlParser.RULE_str_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStr_" ):
                listener.enterStr_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStr_" ):
                listener.exitStr_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStr_" ):
                return visitor.visitStr_(self)
            else:
                return visitor.visitChildren(self)




    def str_(self):

        localctx = HtmlParser.Str_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_str_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(HtmlParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





